--- a/src/components/App/app.module.css
+++ b/src/components/App/app.module.css
@@ -3,10 +3,7 @@
 
   margin: 0 auto;
 
-  background-image: linear-gradient(
-      rgba(154, 85, 41, 0.7),
-      rgba(94, 39, 4, 0.7)
-    ),
+  background-image: linear-gradient(rgba(36, 31, 65, 0.8), rgba(37, 4, 94, 0.8)),
     url(../../images/backgroun.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -23,7 +20,7 @@
   text-align: center;
   max-width: 450px;
 
-  background-color: rgb(31, 122, 103, 0.7);
+  background-color: rgba(35, 165, 137, 0.7);
   border-radius: 12px;
   padding: 20px 10px;
 }
