--- a/src/components/Filter/filter.module.css
+++ b/src/components/Filter/filter.module.css
@@ -5,3 +5,14 @@
 
   gap: 10px;
 }
+
+.text {
+  font-size: 18px;
+  color: rgb(227, 222, 222);
+}
+
+.input {
+  width: 100%;
+  height: 26px;
+  border-radius: 7px;
+}
