--- a/src/pages/Register/register.module.css
+++ b/src/pages/Register/register.module.css
@@ -1,3 +1,16 @@
+.main_wrapper {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  max-width: 450px;
+
+  background-color: rgba(35, 165, 137, 0.7);
+  border-radius: 12px;
+  padding: 20px 10px;
+}
+
 .form {
   display: flex;
   flex-direction: column;
@@ -7,16 +20,12 @@
   border: 2px solid #ffb740;
   padding: 15px 30px;
   border-radius: 10px;
-
-  margin-bottom: 25px;
 }
 
-.label {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-
-  gap: 10px;
+.input {
+  width: 100%;
+  height: 26px;
+  border-radius: 7px;
 }
 
 .btn {
@@ -34,10 +43,4 @@
 .text {
   font-size: 18px;
   color: rgb(227, 222, 222);
-}
-
-.input {
-  width: 100%;
-  height: 26px;
-  border-radius: 7px;
 }
